user right edited

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -41,7 +41,7 @@
       <span class="navbar-toggler-bar navbar-kebab"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
-      <form>
+      <!-- <form>
         <div class="input-group no-border">
           <input
             type="text"
@@ -55,7 +55,7 @@
             </div>
           </div>
         </div>
-      </form>
+      </form> -->
       <ul class="navbar-nav">
 
         <li class="nav-item  dropdown">
