--- a/src/app/workshop/brainstorm/brainstorm.component.html
+++ b/src/app/workshop/brainstorm/brainstorm.component.html
@@ -61,7 +61,6 @@
     </div>
   </div>
 </div>
-
 <div class="row"  *ngIf="!isUser">
   <div class="col-md-3 offset-9">
     <button
@@ -69,7 +68,7 @@
       (click)="nextComment()"
       class="btn btn-round btn-success btn-block btn-lg float-right"
     >
-      Yorumla
+      KATEGORİZE ET
     </button>
   </div>
 </div>
