--- a/src/app/workshop/comments/comments.component.html
+++ b/src/app/workshop/comments/comments.component.html
@@ -71,7 +71,7 @@
       (click)="nextCategorize()"
       class="btn btn-round btn-success btn-block btn-lg float-right"
     >
-      KATEGORİZE ET
+      OYLA
     </button>
   </div>
 </div>
