--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -25,19 +25,20 @@
               </a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link comments" data-toggle="tab" href="#comments"
-                role="tablist">
-                <i class="now-ui-icons shopping_shop"></i> Yorum Yap
-              </a>
-            </li>
-            <li class="nav-item">
               <a  class="nav-link categorize" data-toggle="tab" href="#categorize"
                 role="tablist">
                 <i class="now-ui-icons shopping_shop"> </i> Kategorize Et
               </a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link multi-vote" data-toggle="tab" href="#vote"
+              <a  class="nav-link comments" data-toggle="tab" href="#comments"
+                role="tablist">
+                <i class="now-ui-icons shopping_shop"></i> Yorum Yap
+              </a>
+            </li>
+         
+            <li class="nav-item">
+              <a  class="nav-link vote" data-toggle="tab" href="#vote"
                 role="tablist">
                 <i class="now-ui-icons ui-2_settings-90"></i> Oyla
               </a>
