--- a/src/app/workshop/categorized/categorized.component.html
+++ b/src/app/workshop/categorized/categorized.component.html
@@ -3,40 +3,57 @@
     <h4 class="card-title">Kategorize Et</h4>
   </div>
   <div class="col-sm-6">
-    <button
-     *ngIf="!isUser"
-      data-toggle="modal"
-      data-target="#categorizeModal"
-      (click)="selectMessage()"
-      class="btn btn-round btn-primary float-right"
-    >
+    <button *ngIf="!isUser" data-toggle="modal" data-target="#categorizeModal" (click)="selectMessage()"
+      class="btn btn-round btn-primary float-right">
       Kategorize Et
     </button>
   </div>
 </div>
 
-<div  *ngFor="let item of categorizedMessages">
+<div *ngFor="let item of categorizedMessages">
   <div class="row" [ngClass]="{'disabled': isUser }" *ngIf="item.messages.length>0">
     <div class="col-md-12">
+
+
       <div class="card">
         <div class="card-header">
-          <h4 class="card-title">
+
+          <div class="row">
+            <div class="col-sm-8">
+              <label class="label">
+
+                {{ item.category.categoryTitle }}
+
+
+              </label>
+            </div>
+            <div class="col-sm-4">
+              <button (click)="deleteCategory(item)" *ngIf="!isUser"
+                class="btn btn-round btn-danger float-right btn-xs">
+                <i class="fa fa-reply"></i>
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+
+    </div>
+
+    <!-- <div class="card">
+        <div class="card-header">
+          <div class="card-title">
             <div class="row">
               <div class="col-sm-6">
-                <h6 class="card-title">{{ item.category.categoryTitle }}</h6>
+                <label class="card-title">{{ item.category.categoryTitle }}</label>
               </div>
               <div class="col-sm-6">
-                <button
-                  (click)="deleteCategory(item)"
-                  *ngIf="!isUser"
-                  class="btn btn-round btn-danger float-right"
-                >
-                  <i class="nc-icon nc-simple-remove"></i>
-                </button>
+               
               </div>
             </div>
-          </h4>
-
+          </div> -->
+    <!-- 
           <div
             class="alert alert-primary fade show"
             *ngFor="let categoryMessage of item.messages"
@@ -45,27 +62,22 @@
               ><i class="nc-icon nc-bulb-63"></i>
               {{ categoryMessage.messageText }}</span
             >
-          </div>
-        </div>
-      </div>
-    </div>
+          </div> -->
+    <!-- </div> -->
   </div>
 </div>
+<!-- </div>
+</div> -->
 
 <div *ngFor="let msg of messages">
-  <div class="row"  [ngClass]="{'disabled': isUser }">
+  <div class="row" [ngClass]="{'disabled': isUser }">
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
           <div class="form-check mt-3">
             <div class="form-check">
               <label class="form-check-label">
-                <input
-                  *ngIf="!isUser"
-                  class="form-check-input"
-                  [(ngModel)]="msg.isCategorized"
-                  type="checkbox"
-                />
+                <input *ngIf="!isUser" class="form-check-input" [(ngModel)]="msg.isCategorized" type="checkbox" />
                 {{ msg.messageText }} <span class="form-check-sign" *ngIf="!isUser"></span>
               </label>
             </div>
@@ -75,41 +87,21 @@
     </div>
   </div>
 </div>
-
-<div class="row" *ngIf="!isUser"  >
+<div class="row" *ngIf="!isUser">
   <div class="col-md-3 offset-9">
-    <button
-     
-      (click)="Vote()"
-      class="btn btn-round btn-success btn-block btn-lg float-right"
-    >
-      OYLA
+    <button (click)="Vote()" class="btn btn-round btn-success btn-block btn-lg float-right">
+      YORUMLA
     </button>
   </div>
 </div>
 
-<div
-  class="modal fade"
-  id="categorizeModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="ModalLabel"
-  aria-hidden="true"
->
-  <form
-    #templateForm="ngForm"
-    (ngSubmit)="saveCategorized()"
-    class="container mt-3"
-  >
+<div class="modal fade" id="categorizeModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
+  aria-hidden="true">
+  <form #templateForm="ngForm" (ngSubmit)="saveCategorized()" class="container mt-3">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header justify-content-center">
-          <button
-            type="button"
-            class="close"
-            data-dismiss="modal"
-            aria-label="Close"
-          >
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <i class="nc-icon nc-simple-remove"></i>
           </button>
           <h4 class="title title-up">Kategori Ekle</h4>
@@ -119,13 +111,8 @@
             <div class="col-12">
               <div class="form-group">
                 <label class="categorized-title">Başlık Giriniz</label>
-                <input
-                  style="max-height: max-content"
-                  rows="10"
-                  class="form-control textarea"
-                  [(ngModel)]="categorized.title"
-                  [ngModelOptions]="{ standalone: true }"
-                />
+                <input style="max-height: max-content" rows="10" class="form-control textarea"
+                  [(ngModel)]="categorized.title" [ngModelOptions]="{ standalone: true }" />
               </div>
             </div>
           </div>
@@ -152,11 +139,7 @@
 
         <div class="modal-footer">
           <div class="left-side">
-            <button
-              type="button"
-              class="btn btn-default btn-link"
-              data-dismiss="modal"
-            >
+            <button type="button" class="btn btn-default btn-link" data-dismiss="modal">
               Vazgeç
             </button>
           </div>
