--- a/src/app/workshop/report/report.component.html
+++ b/src/app/workshop/report/report.component.html
@@ -1,167 +1,196 @@
 <div class="row">
-    <div class="col-sm-6">
-      <h4 class="card-title">Raporla</h4>
+    <div class="col-sm-9">
+      <h4 class="card-title"></h4>
     </div>
-    <div class="col-sm-6">
-       
+    <div class="col-sm-3">
+
+  <button id="generate"  class="btn btn-success" (click)="createPdf()">CREATE PDF</button>
+
     </div>
   </div>
 
-<div class="row">
-
-    <div class="col-sm-6">
-        <h3 class="header-title text-center" *ngIf="categorizedMessages.length>0">Arşiv</h3>
-        <div *ngFor="let item of categorizedMessages" >
-         
-          <div class="row" *ngIf="item.messages.length>0">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="card-header">
-                  <h4 class="card-title">
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <h6 class="card-title">{{ item.category.categoryTitle }}</h6>
-                      </div>
-                      <div class="col-sm-6">
-        
-                      </div>
-                    </div>
-                  </h4>
-        
-                  <div *ngFor="let categoryMessage of item.messages">
-
-                  <div class="alert alert-primary "   *ngIf="!categoryMessage.isCategorized">
-      
-                      <div class="form-check mt-3">
-                          <div class="form-check">
-                            <label class="form-check-label w-100">
-                              <input
-                                (change)="changeCategory(categoryMessage,item)"
-                                class="form-check-input"
-                                [(ngModel)]="categoryMessage.isCategorized"
-                                type="checkbox"
-                              />
-                              <span class="form-check-sign"></span>
-                           
-                                <span class="text-white " >
-                                    {{ categoryMessage.messageText }}</span>
-                                  
-                                    <span class="badge badge-pill badge-warning float-right"  style="margin: 0 5px !important; font-size:1.2em"><i class="fa fa-heart"></i> Oy ({{categoryMessage.voteCount}}) </span>
-                                    <span class="badge badge-pill badge-danger float-right" style=" font-size:1.2em">Yorum 
-                                    ({{categoryMessage.commentCount}}) </span>
-                             
-                            </label>
-                            
-                          </div>
-                        </div>
-                 
-                      
-                  </div>
-                  </div>
-                </div>
-              </div>
+  <div id="report-content" name="report-content" #content class="container form">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="text-center text-danger">YÖNETİCİ ÖZETİ</h2>
+        <p>
+          Raporun bu bölümünde atölye çalışmasında ele alınan her bir konuya ait öneriler, sonunda yapılan oylama
+          sonuçlarına
+          bağlı olarak
+          “öncelikli” olarak tanımlanan fikirler ve her bir fikir için verilen oy sayıları özetlenmiştir.
+        </p>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-sm-12">
+        <h3 class="float-left"> Konu</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="alert alert-warning" role="alert">
+          <b>Başlık:</b> {{subject.subjectTitle}}
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="alert alert-warning" role="alert">
+          <b>Açıklama:</b> {{subject.subjectDescription}}
+        </div>
+      </div>
+    </div>
+  
+  
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="float-left">Öncelikli Fikirler</h2>
+      </div>
+    </div>
+  
+    <div class="row" *ngFor=" let message of categorizedMessages">
+      <div class="col-sm-12">
+        <div class="alert alert-success" role="alert">
+          <div class="row">
+            <p class="col-sm-11"> {{message.messageText}}
+            </p>
+            <span class="float-right col-sm-1"> <i class="fa fa-thumbs-up fa-2x "></i>({{message.voteCount}})</span>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  
+  
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="float-left">Diğer Fikirler</h2>
+      </div>
+    </div>
+  
+    <div class="row" *ngFor=" let message of messages">
+      <div class="col-sm-12">
+        <div class="alert alert-success" role="alert">
+          <div class="row">
+            <p class="col-sm-11"> {{message.messageText}}
+            </p>
+            <span class="float-right col-sm-1"> <i class="fa fa-thumbs-up fa-2x "></i>({{message.voteCount}})</span>
+          </div>
+  
+        </div>
+      </div>
+    </div>
+  
+  
+  
+   
+   
+  
+   
+   
+  
+  
+    <div class="row">
+      <div class="col-sm-12">
+  
+        <h2 class="text-center text-danger">RAPOR</h2>
+        <p>
+          Bu bölümünde atölye çalışmasının sonunda ortaya çıkan fikirler, bu fikirlere ait yorumlar, her bir fikire ait
+          oylama sonuçları sunulmuştur.
+        </p>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="alert alert-warning" role="alert">
+          <b>Başlık:</b> {{subject.subjectTitle}}
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="alert alert-warning" role="alert">
+          <b>Açıklama:</b> {{subject.subjectDescription}}
+        </div>
+      </div>
+    </div>
+  
+  
+  
+  
+  
+    <div class="row" >
+      <div class="col-sm-12">
+        <h3 class="float-left">Öncelikli Fikirler</h3>
+      </div>
+    </div>
+  
+    <div class="row" *ngFor=" let message of categorizedMessages">
+      <div class="col-sm-12" >
+        <div class="alert alert-success" role="alert">
+          <div class="row">
+            <p class="col-sm-11"> {{message.messageText}}
+            </p>
+            <span class="float-right col-sm-1"> <i class="fa fa-thumbs-up fa-2x "></i>({{message.voteCount}})</span>
+          </div>
+        </div>
+  
+        <div class="row" *ngFor="let comment of message.comments">
+          <div class="col-sm-9 offset-sm-3">
+            <div class="alert alert-primary" role="alert">
+  
+              <p> {{comment.commentText}}
+              </p>
+  
+  
+  
             </div>
           </div>
         </div>
-        
-       </div>
-   <div class="col-sm-6">
-    <h3 class="header-title text-center" *ngIf="categorizedFavoriMessages.length>0">Kategoriler</h3>
-    <div *ngFor="let item of categorizedFavoriMessages">
       
-       <div class="row" *ngIf="item.messages.length>0">
-         <div class="col-md-12">
-           <div class="card">
-             <div class="card-header">
-               <h4 class="card-title">
-                 <div class="row">
-                   <div class="col-sm-6">
-                     <h6 class="card-title">{{ item.category.categoryTitle }}</h6>
-                   </div>
-                   <div class="col-sm-6">
-     
-                   </div>
-                 </div>
-               </h4>
-
-
-     <div *ngFor="let categoryMessage of item.messages">
+  
+      </div>
+    </div>
 
     
-               <div class="alert alert-primary " *ngIf="categoryMessage.isCategorized">
-   
-                   <div class="form-check mt-3">
-                       <div class="form-check">
-                         <label class="form-check-label w-100">
-                           <input
-                             (change)="changeCategoryRemove(categoryMessage,item)"
-                             class="form-check-input"
-                             [(ngModel)]="categoryMessage.isCategorized"
-                             type="checkbox"
-                           />
-                           <span class="form-check-sign"></span>
-                           <span class="text-white">
-                               {{ categoryMessage.messageText }}</span>
-                 
-                               <span class="badge badge-pill badge-warning float-right"  style="margin: 0 5px !important; font-size:1.2em"><i class="fa fa-heart"></i> Oy ({{categoryMessage.voteCount}}) </span>
-                               <span class="badge badge-pill badge-danger float-right" style=" font-size:1.2em">Yorum 
-                               ({{categoryMessage.commentCount}}) </span>
-                         </label>
-                         
-                       </div>
-                     </div>
-              
-                   
-               </div>
-            </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
-
-  
-</div>
-<div class="row">
-    <div class="col-md-3 offset-9">
-      <button
-       
-        (click)="archiveMessage()"
-        class="btn btn-round btn-success btn-block btn-lg float-right"
-      >
-        RAPORLA
-      </button>
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="float-left">Diğer Fikirler</h2>
+      </div>
     </div>
+  
+    <div class="row" *ngFor="let message of messages">
+      <div class="col-sm-12">
+        <div class="alert alert-success" role="alert">
+          <div class="row">
+            <p class="col-sm-11"> {{message.messageText}}
+            </p>
+            <span class="float-right col-sm-1"> <i class="fa fa-thumbs-up fa-2x "></i>({{message.voteCount}})</span>
+          </div>
+  
+        </div>
+
+        
+        <div class="row" *ngFor="let comment of message.comments">
+          <div class="col-sm-9 offset-sm-3">
+            <div class="alert alert-primary" role="alert">
+  
+              <p> {{comment.commentText}}
+              </p>
+  
+  
+  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  
   </div>
-
-
- 
-
-
-  
-  <style>
-    .modal-body {
-      padding: 20px 10px;
-    }
-  
-    .checkbox {
-      margin-right: 20px;
-      margin-bottom: 10px;
-    }
-  
-    .messaje-list-title {
-      font-weight: bold;
-      font-size: 16px;
-    }
-  
-    .message-list {
-      margin: 10px 10px 10px 10px;
-    }
-  
-    .categorized-title {
-      font-weight: bold;
-      font-size: 16px;
-      margin-bottom: 10px;
-    }
-  </style>
+  <div id="editor"></div>
+  <div class="my-overlay" *ngIf="showOverlay">
+    <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>
+  </div>
