--- a/src/app/workshop/categorized/categorized.component.html
+++ b/src/app/workshop/categorized/categorized.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<div *ngFor="let item of categorizedMessages">
+<!-- <div *ngFor="let item of categorizedMessages">
   <div class="row" [ngClass]="{'disabled': isUser }" *ngIf="item.messages.length>0">
     <div class="col-md-12">
 
@@ -41,31 +41,8 @@
 
     </div>
 
-    <!-- <div class="card">
-        <div class="card-header">
-          <div class="card-title">
-            <div class="row">
-              <div class="col-sm-6">
-                <label class="card-title">{{ item.category.categoryTitle }}</label>
-              </div>
-              <div class="col-sm-6">
-               
-              </div>
-            </div>
-          </div> -->
-    <!-- 
-          <div
-            class="alert alert-primary fade show"
-            *ngFor="let categoryMessage of item.messages"
-          >
-            <span
-              ><i class="nc-icon nc-bulb-63"></i>
-              {{ categoryMessage.messageText }}</span
-            >
-          </div> -->
-    <!-- </div> -->
   </div>
-</div>
+</div> -->
 <!-- </div>
 </div> -->
 
