--- a/src/app/workshop/vote/vote.component.html
+++ b/src/app/workshop/vote/vote.component.html
@@ -13,12 +13,12 @@
   </div>
 </div>
 
-<div *ngFor="let item of categorizedMessages">
+<div *ngFor="let message of messages">
   <div class="row" >
     <div class="col-md-12">
       <div class="card">
         <div class="card-header">
-          <h4 class="card-title">
+          <!-- <h4 class="card-title">
             <div class="row">
               <div class="col-sm-6">
                 <h6 class="card-title">{{ item.category.categoryTitle }}</h6>
@@ -27,22 +27,22 @@
 
               </div>
             </div>
-          </h4>
+          </h4> -->
 
-          <div class="alert alert-primary fade show" *ngFor="let categoryMessage of item.messages">
+          <div class="alert alert-primary fade show">
             <span><i class="nc-icon nc-bulb-63"></i>
-              {{ categoryMessage.messageText }}</span>
+              {{ message.messageText }}</span>
 
             <button class="btn btn-warning btn-round float-right btn-sm"   [disabled]="retroRight.voteRight <= 0 "
-              (click)="setVote(categoryMessage)" style="margin: 0 5px !important;"><i class="fa fa-heart" [ngClass]="{
-                'text-danger':isVotedCheck(categoryMessage.id) === true
+              (click)="setVote(message)" style="margin: 0 5px !important;"><i class="fa fa-heart" [ngClass]="{
+                'text-danger':isVotedCheck(message.id) === true
                 
               }"></i> Oyla
-              ({{categoryMessage.voteCount}}) </button>
+              ({{message.voteCount}}) </button>
 
-            <button type="button" (click)="getComment(categoryMessage)"
+            <button type="button" (click)="getComment(message)"
               class="btn btn-danger btn-round float-right btn-sm" style="margin:0 !important">Yorumlar
-              ({{categoryMessage.commentCount}}) </button>
+              ({{message.commentCount}}) </button>
 
           </div>
         </div>
