--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -9,83 +9,7 @@
 </div>
 
 <div class="sidebar-wrapper" >
-  <!-- <div class="user">
-    <div class="photo">
-      <img src="./assets/img/faces/ayo-ogunseinde-2.jpg" />
-    </div>
-    <div class="info">
-      <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-        <span>
-          Chet Faker
-          <b class="caret"></b>
-        </span>
-      </a>
-      <div class="clearfix"></div>
-      <div class="collapse" id="collapseExample">
-        <ul class="nav">
-          <li>
-            <a href="#">
-              <span class="sidebar-mini-icon">MP</span>
-              <span class="sidebar-normal">My Profile</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="sidebar-mini-icon">EP</span>
-              <span class="sidebar-normal">Edit Profile</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="sidebar-mini-icon">S</span>
-              <span class="sidebar-normal">Settings</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div> -->
-  <!-- <div *ngIf="isNotMobileMenu()">
-        <form class="navbar-form navbar-left navbar-search-form" role="search">
-            <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                <input type="text" value="" class="form-control" placeholder="Search...">
-            </div>
-        </form>
-        <ul class="nav nav-mobile-menu">
-            <li>
-                <a href="#stats" class="dropdown-toggle btn-magnify" data-toggle="dropdown">
-                    <i class="ti-panel"></i>
-                    <p>Stats</p>
-                </a>
-            </li>
-            <li class="dropdown">
-                <a href="#notifications" class="dropdown-toggle btn-rotate" data-toggle="dropdown">
-                    <i class="ti-bell"></i>
-                    <span class="notification">5</span>
-                    <p class="hidden-md hidden-lg">
-                        Notifications
-                        <b class="caret"></b>
-                    </p>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="#not1">Notification 1</a></li>
-                    <li><a href="#not2">Notification 2</a></li>
-                    <li><a href="#not3">Notification 3</a></li>
-                    <li><a href="#not4">Notification 4</a></li>
-                    <li><a href="#another">Another notification</a></li>
-                </ul>
-            </li>
-            <li>
-                <a class="btn-rotate">
-                    <i class="ti-settings"></i>
-                    <p class="hidden-md hidden-lg">
-                        Settings
-                    </p>
-                </a>
-            </li>
-        </ul>
-    </div> -->
+ 
     
   <ul class="nav" >
     <li routerLinkActive="active" *ngFor="let menuitem of menuItems" >
@@ -123,5 +47,32 @@
         </ul>
       </div>
     </li>
+
+
+
   </ul>
+  <ul class="nav online-user" *ngIf="users.length>0" >
+   
+    <li *ngFor="let user of users" >
+      <a href="#"  class="text-success">
+          <i class="nc-icon nc-circle-10 text-success"></i>
+          <p class="hidden-md hidden-lg">
+              {{user.name}}  {{user.surname}}
+          </p>
+      </a>
+  </li>
+  <li *ngFor="let user of users" >
+    <a href="#" class="text-danger">
+        <i class="nc-icon nc-circle-10 text-danger"></i>
+        <p class="hidden-md hidden-lg">
+            {{user.name}}  {{user.surname}}
+        </p>
+    </a>
+</li>
+  
+
+  </ul>
+
+
+
 </div>
