--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div>
     <router-outlet ></router-outlet>
 <app-loader></app-loader>
+<div (window:beforeunload)="onBeforeUnload()"></div>
+
 </div>
