--- a/src/app/workshop/retrospectives/retrospectives.component.html
+++ b/src/app/workshop/retrospectives/retrospectives.component.html
@@ -58,6 +58,10 @@
 
   <div class="row" *ngIf="isShow">
     <div class="col-md-12 ml-auto mr-auto">
+      <div class="form-group">
+       
+        <label *ngIf="isExistLeader()" class="alert alert-primary">Davet Linki: {{inviteLink}}</label>
+      </div>
       <div class="card">
         <div class="card-header">
           <h6 class="title">{{ selectSubject.subjectTitle }}</h6>
